--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <meta name="keywords" content="HTML,CSS,JavaScript,web,development,women,female,girl,learning,tech,ux,ui,caribbean,akita,georgia">
     <meta name="author" content="Nyleesia Nicome Schnarr">
     <link rel="stylesheet" type = "text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style2.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style3.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style4.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style5.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/psuedo.css">
+    <link rel="stylesheet" media="screen and (max-width: 859px)" href="assets/css/mediaQueries.css">
     <link rel="icon" type="image/png" href="https://png.icons8.com/ios/1600/007AFF/home">   
     <title> Nyleesia Schnarr About </title>  
     <style>
