--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,14 @@
     <meta name="author" content="Nyleesia Nicome Schnarr">
     <link rel="stylesheet" type = "text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type = "text/css" href="assets/css/style.css">
-    <link rel="icon" type="image/png" href="https://findicons.com/files/icons/1671/simplicio/128/camera.png">  
-    <title> Nyleesia Schnarr Portfolio </title>   
+    <link rel="stylesheet" type = "text/css" href="assets/css/style2.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style3.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style4.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style5.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/psuedo.css">
+    <link rel="stylesheet" media="screen and (max-width: 859px)" href="assets/css/mediaQueries.css">
+    <link rel="icon" type="image/png" href="https://png.icons8.com/ios/1600/007AFF/home">   
+    <title> Nyleesia Schnarr About </title>  
     <style>
         body {
             background-image: url("assets/images/background.png");
@@ -55,11 +61,11 @@ as a separate element.-->
           
             <div class="portfolio-image"><img src="https://picsum.photos/450/350" alt= "1"> <div class="caption"> First Image </div></div>
         
-            <div class="portfolio-image"><img src="http://placeimg.com/450/350/any"alt= "2"><div class="caption"> Second Image  </div></div>
+            <div class="portfolio-image"><img src="http://placeimg.com/450/350/any" alt= "2"><div class="caption"> Second Image  </div></div>
 
             <div class="portfolio-image"><img src="https://loremflickr.com/450/350" alt= "3"><div class="caption"> Third Image  </div></div>
 
-            <div class="portfolio-image"><img src="https://placeimg.com/450/350/tech/grayscale"alt= "4"><div class="caption"> Fourth Image  </div></div>
+            <div class="portfolio-image"><img src="https://placeimg.com/450/350/tech/grayscale" alt= "4"><div class="caption"> Fourth Image  </div></div>
 
             <div class="portfolio-image"><img src="https://placebeard.it/450/350" alt= "5"><div class="caption"> Fifth Image  </div></div>
 
