--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,19 @@
     <meta name="author" content="Nyleesia Nicome Schnarr">
     <link rel="stylesheet" type = "text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type = "text/css" href="assets/css/style.css">
-    <link rel="stylesheet" media = "screen and (max-width: 768px)" href="assets/css/mediaQueries.css">
-    <link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTb8Kam5ARMsLc7yoTSjTAxLOh7qbpsTinKjlqLUNdTOLmEqSmv">
-
-    <title> Nyleesia Schnarr Contact </title>   
+    <link rel="stylesheet" type = "text/css" href="assets/css/style2.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style3.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style4.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/style5.css">
+    <link rel="stylesheet" type = "text/css" href="assets/css/psuedo.css">
+    <link rel="stylesheet" media="screen and (max-width: 859px)" href="assets/css/mediaQueries.css">
+    <link rel="icon" type="image/png" href="https://png.icons8.com/ios/1600/007AFF/home">   
+    <title> Nyleesia Schnarr About </title>  
     <style>
         body {
             background-image: url("assets/images/background.png");
         }    
-    </style>   
+    </style>    
 </head>
 
 <!-- start of navigation bar -->
@@ -72,12 +76,6 @@ as a separate element.-->
         </div>
     </div>
 
-
-    <style>
-            body {
-                background-image: url("assets/images/background.png");
-            }    
-    </style> 
 <footer>
     <div class ="quote">
         <p> "Unity is strength. For no man is an island, unless he be the Isle of Man." Me.</p>
