update portfolio link for hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@ as a separate element.-->
         <div class= "portfolio-images">
             <!-- these are all images -->
           
-            <div class="portfolio-image"><img src="https://picsum.photos/450/350" alt= "1"> <div class="caption"> First Image </div></div>
+            <a href="/My-Hangman-Game/"> <div class="portfolio-image"><img src="assets/images/hangman-portfolio.PNG" alt= "Hangman Game"> <div class="caption"> Hangman Game </div></div> </a>
         
             <div class="portfolio-image"><img src="http://placeimg.com/450/350/any" alt= "2"><div class="caption"> Second Image  </div></div>
 
