--- a/portfolio.html
+++ b/portfolio.html
@@ -59,11 +59,11 @@ as a separate element.-->
         <div class= "portfolio-images">
             <!-- these are all images -->
           
-            <a href="/My-Hangman-Game/"> <div class="portfolio-image"><img src="assets/images/hangman-portfolio.PNG" alt= "Hangman Game"> <div class="caption"> Hangman Game </div></div> </a>
+            <a href="https://nyleesia.github.io/My-Hangman-Game/"> <div class="portfolio-image"><img src="assets/images/hangman-portfolio.PNG" alt= "Hangman Game"> <div class="caption"> Hangman Game </div></div> </a>
         
             <div class="portfolio-image"><img src="http://placeimg.com/450/350/any" alt= "2"><div class="caption"> Second Image  </div></div>
 
-            <div class="portfolio-image"><img src="https://loremflickr.com/450/350" alt= "3"><div class="caption"> Third Image  </div></div>
+            <a href="https://nyleesia.github.io/TriviaGame/"> <div class="portfolio-image"><img src="assets/images/trivia-game-portfolio.PNG" alt= "Trivia Game"> <div class="caption"> Trivia Game </div></div> </a>
 
             <div class="portfolio-image"><img src="https://placeimg.com/450/350/tech/grayscale" alt= "4"><div class="caption"> Fourth Image  </div></div>
 
