--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@ as a separate element.-->
           
             <a href="https://nyleesia.github.io/My-Hangman-Game/"> <div class="portfolio-image"><img src="assets/images/hangman-portfolio.PNG" alt= "Hangman Game"> <div class="caption"> Hangman Game </div></div> </a>
         
-            <div class="portfolio-image"><img src="http://placeimg.com/450/350/any" alt= "2"><div class="caption"> Second Image  </div></div>
+            <a href="https://nyleesia.github.io/unit-4-game/#"> <div class="portfolio-image"><img src="assets/images/unit4-game-portfolio.PNG" alt= "RPG Game"> <div class="caption"> RPG Game </div></div> </a>
 
             <a href="https://nyleesia.github.io/TriviaGame/"> <div class="portfolio-image"><img src="assets/images/trivia-game-portfolio.PNG" alt= "Trivia Game"> <div class="caption"> Trivia Game </div></div> </a>
 
